--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a web developer.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I'm from Colombia</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Flight Simulators, drones, tech gadgets, photography and soccer.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Working as a programmer in the medical industry.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I currently live in Davie, FL</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>To be able to take my skills to the next level in a very demanding industry.</p>
     </section>
 
     <footer id="footer">
